--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>tindog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
